--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "react-demo",
   "version": "0.1.0",
+  "homepage": "https://matteokjh.github.io/react-demo",
   "private": true,
   "dependencies": {
     "react": "^16.8.6",
@@ -11,7 +12,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -27,5 +29,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^2.0.1"
   }
 }
